--- a/webui/src/layouts/MainLayout/MainLayout.module.css
+++ b/webui/src/layouts/MainLayout/MainLayout.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    overflow: hidden;
 }
 
 .header {
@@ -13,7 +13,6 @@
 }
 
 .contentWrapper {
-    flex: 1;
     display: flex;
     flex-direction: row;
 }
